// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSelectors Should create selectors 1`] = `
{
  "after button": {
    "canvas hover": {
      "label": "button ::after on canvas hover",
      "target": ":hover buttonClassName::after",
    },
    "hover": {
      "label": "button ::after on hover",
      "target": "buttonClassName:hover::after",
    },
    "normal": {
      "label": "button ::after",
      "target": "buttonClassName::after",
    },
  },
  "after canvas": {
    "hover": {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "normal": {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "before button": {
    "canvas hover": {
      "label": "button ::before on canvas hover",
      "target": ":hover buttonClassName::before",
    },
    "hover": {
      "label": "button ::before on hover",
      "target": "buttonClassName:hover::before",
    },
    "normal": {
      "label": "button ::before",
      "target": "buttonClassName::before",
    },
  },
  "before canvas": {
    "hover": {
      "label": "canvas ::before on hover",
      "target": ":hover::before",
    },
    "normal": {
      "label": "canvas ::before",
      "target": "::before",
    },
  },
  "button": {
    "canvas hover": {
      "label": "button on canvas hover",
      "target": ":hover buttonClassName",
    },
    "hover": {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "normal": {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "canvas": {
    "hover": {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "normal": {
      "label": "canvas",
      "target": "",
    },
  },
}
`;

exports[`createSelectors Should create selectors with only pseudo elements 1`] = `
{
  "after button": {
    "canvas hover": {
      "label": "button ::after on canvas hover",
      "target": ":hover buttonClassName::after",
    },
    "hover": {
      "label": "button ::after on hover",
      "target": "buttonClassName:hover::after",
    },
    "normal": {
      "label": "button ::after",
      "target": "buttonClassName::after",
    },
  },
  "after canvas": {
    "hover": {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "normal": {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "before button": {
    "canvas hover": {
      "label": "button ::before on canvas hover",
      "target": ":hover buttonClassName::before",
    },
    "hover": {
      "label": "button ::before on hover",
      "target": "buttonClassName:hover::before",
    },
    "normal": {
      "label": "button ::before",
      "target": "buttonClassName::before",
    },
  },
  "before canvas": {
    "hover": {
      "label": "canvas ::before on hover",
      "target": ":hover::before",
    },
    "normal": {
      "label": "canvas ::before",
      "target": "::before",
    },
  },
}
`;

exports[`createSelectors Should create selectors without pseudo elements 1`] = `
{
  "button": {
    "canvas hover": {
      "label": "button on canvas hover",
      "target": ":hover buttonClassName",
    },
    "hover": {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "normal": {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "canvas": {
    "hover": {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "normal": {
      "label": "canvas",
      "target": "",
    },
  },
}
`;
